gitops/apps/simple-time-service/overlays/staging/patch-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-time-service
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: simple-time-service
          # Staging uses commit SHA tags (e.g., abc1234)
          # Update this after merging feature branch MR to develop
          # Image is already built during MR, so just update the tag here
          image: karthikbm2k25/simple-time-service:latest
