gitops/apps/simple-time-service/overlays/staging/patch-ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-time-service-ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: kart24-shop-staging
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  rules:
    - host: staging.time.kart24.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-time-service
                port:
                  number: 80
  tls:
    - hosts:
        - staging.time.kart24.shop
      secretName: staging-time-tls
